--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 someinfoinbot.md
 testo.py
+users.db
+
+
 
 
 # штуки, которые записаны при создании репозитория на github, если выбрать такой параметр:
