remake database.py to async

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 someinfoinbot.md
 testo.py
 users.db
-
-
+__database.py
+python.code-workspace
 
 
 # штуки, которые записаны при создании репозитория на github, если выбрать такой параметр:
