--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ testo.py
 users.db
 __database.py
 python.code-workspace
-
+db/users*
+__database_v2_test.py
+db/database_v2.py
 
 # штуки, которые записаны при создании репозитория на github, если выбрать такой параметр:
 
