--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiogram==3.18.0
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
+aiosqlite==0.21.0
 annotated-types==0.7.0
 attrs==25.1.0
 certifi==2025.1.31
@@ -10,15 +11,23 @@ charset-normalizer==3.4.1
 environs==14.1.1
 frozenlist==1.5.0
 idna==3.10
+iniconfig==2.0.0
+iso8601==2.1.0
 magic-filter==1.0.12
 marshmallow==3.26.1
 multidict==6.1.0
 packaging==24.2
+pluggy==1.5.0
 propcache==0.2.1
+py-asqlite3==0.7
 pydantic==2.10.6
 pydantic_core==2.27.2
+pypika-tortoise==0.5.0
+pytest==8.3.4
 python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
+tortoise-orm==0.24.2
 typing_extensions==4.12.2
 urllib3==2.3.0
 yarl==1.18.3
