clean config.py

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 BOT_TOKEN = '60..573:AA...UR'
+DB_PATH = 'db/users.db'
+ADMIN_IDS = 17390
 EMAIL_REGEX = r'^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
