--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 pypika-tortoise==0.5.0
 pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dotenv==1.0.1
 pytz==2025.1
 requests==2.32.3
